Activate and Deactivate for Product Service
