# services/product-service/internal/dto/product/activate.go
@@ -1,1 +1,13 @@
 package product
+
+type (
+	ProductActivateReq struct {
+		ID int64
+	}
+
+	ProductActivateRes struct {
+		ID     int64  `json:"id"`
+		Name   string `json:"name"`
+		Status string `json:"status"`
+	}
+)
