# services/product-service/internal/dto/product/deactivate.go
@@ -1,1 +1,13 @@
 package product
+
+type (
+	ProductDeactivateReq struct {
+		ID int64
+	}
+
+	ProductDeactivateRes struct {
+		ID     int64  `json:"id"`
+		Name   string `json:"name"`
+		Status string `json:"status"`
+	}
+)
